--- a/bookmark-service/pom.xml
+++ b/bookmark-service/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!--Validation-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <!--H2-->
         <dependency>
             <groupId>com.h2database</groupId>
